# xfig

./: CHANGES  CompKeyDB  FIGAPPS  Fig-co.ad  Fig-color.ad  Fig-color.classic.ad  Fig.ad  INSTALL  Imakefile  LATEX.AND.XFIG  Makefile  Makefile.am  Makefile.in  Makefile.noimake  README  SmeBSB.c  SmeBSBP.h  SmeCascade.c  SmeCascade.h  SmeCascadeP.h  aclocal.m4  config.h.in  configure  configure.ac  d_arc.c  d_arc.h  d_arcbox.c  d_box.c  d_box.h  d_ellipse.c  d_epsobj.c  d_intspline.c  d_line.c  d_line.h  d_picobj.c  d_regpoly.c  d_spline.c  d_spline.h  d_subspline.c  d_subspline.h  (+190 more)
Doc/: FORMAT2.1  FORMAT3.0  FORMAT3.1  FORMAT3.2  MAKEPS  TODO  xfig-howto.ps  xfig._man  xfig.html  xfig.man  xfig.man.orig  xfig.ps.Z  xfig_man.html
Doc/html/: accelerators.html  attributes.html  authors.html  bugs_fixed.html  but_frm_accelerators.html  but_frm_attributes.html  but_frm_authors.html  but_frm_bugs_fixed.html  but_frm_drawing.html  but_frm_editing.html  but_frm_faq.html  but_frm_global_settings.html  but_frm_installation.html  but_frm_layers.html  but_frm_main_menus.html  but_frm_miscellaneous.html  but_frm_new_features.html  but_frm_object_libraries.html  but_frm_options.html  but_frm_panning.html  but_frm_printing.html  button_frame.html  command-panel.html  contents.html  drawing-mode.html  drawing.html  editing-mode.html  editing.html  faq.html  features_bugs.html  fig-format.html  frm_accelerators.html  frm_attributes.html  frm_authors.html  frm_bugs_fixed.html  frm_drawing.html  frm_editing.html  frm_faq.html  frm_global_settings.html  frm_installation.html  (+26 more)
Doc/html/images/: add-arrow-button.gif.bak  global-settings.gif.orig  open-compound-button.gif.bak  screen-image.fig  screen-image.fig.bak  unit-box.gif.orig  update-control.gif.bak
Doc/html/japanese/: accelerators.html  attributes.html  authors.html  bugs_fixed.html  button_frame.html  button_frame.map  command-panel.html  contents.html  drawing-mode.html  drawing.html  editing-mode.html  editing.html  faq.html  features_bugs.html  fig-format.html  frm_accelerators.html  frm_attributes.html  frm_authors.html  frm_bugs_fixed.html  frm_drawing.html  frm_editing.html  frm_faq.html  frm_global_settings.html  frm_i18n.html  frm_installation.html  frm_introduction.html  frm_layers.html  frm_main_menus.html  frm_master.html  frm_miscellaneous.html  frm_new_features.html  frm_object_libraries.html  frm_options.html  frm_panning.html  frm_printing.html  global_settings.html  i18n.html  index.html  indicator-panel.html  installation.html  (+11 more)
Examples/: 3dhouse.fig  8-bit.fig  aircraft.fig  antennas.fig  arithmetic.fig  arrows.fig  balance.fig  bath.fig  bedroom1.fig  bedroom2.fig  cassette.fig  circuit.fig  clipart.fig  clp_bldgs.fig  clp_computer.fig  clp_computer1.fig  clp_computer2.fig  clp_hospit_equip.fig  clp_network.fig  ctrlbox_lay.fig  ctrlbox_sch.fig  damper.fig  deltat.fig  dresser.fig  experiment.fig  filenames.fig  flow.fig  flowchart.fig  gold.fig  greek.fig  greenpig.fig  house.fig  houseA.fig  houseB.fig  houseC.fig  houseD.fig  house_elev.fig  housecheck.fig  illusion.fig  lidar.fig  (+32 more)
Examples/Libraries/Buildings/: barrack.fig  highrise1.fig  highrise2.fig  office.fig  twostory.fig  twostory_front.fig
Examples/Libraries/Computers/: desktop1.fig  desktop2.fig  desktop3.fig  desktop4.fig  film_digitizer.fig  high_speed_disk.fig  laptop.fig  minitower.fig  printer.fig  scanner.fig  scanner2.fig  tapedrive.fig  telephone.fig  terminal.fig  tower1.fig  tower2.fig  tower3.fig  xterminal.fig
Examples/Libraries/ERD/: README
Examples/Libraries/Flags/: austria.fig  belgium.fig  finland.fig  france.fig  germany.fig  greatbritain.fig  greece.fig  iceland.fig  ireland.fig  italy.fig  japan.fig  luxemburg.fig  nederlands.fig  norway.fig  poland.fig  portugal.fig  spain.fig  sweden.fig  switzerland.fig  usa.fig
Examples/Libraries/Flowchart/: arrow_down.fig  arrow_left.fig  arrow_open_left.fig  arrow_open_right.fig  arrow_right.fig  arrow_up.fig  collate.fig  comment_annotation.fig  communication_link.fig  connector.fig  core.fig  decision.fig  display.fig  document.fig  extract.fig  initialization.fig  inputoutput.fig  magnetic_disk.fig  magnetic_tape.fig  manual_input.fig  manual_operator.fig  merge.fig  offline_storage.fig  offpage_connector.fig  online_storage.fig  predefined_process.fig  process.fig  punched_card.fig  sort.fig  terminal_interrupt.fig
Examples/Libraries/Hospital/: centrifuge.fig  display.fig  ekg.fig  (+6 more)
Libraries/Computers/: README  datacard.fig  screen.fig  usbpen.fig  xbox.fig
Libraries/Examples/: uno_hand.fig.bak
Libraries/Furniture/: grand_piano.fig  upright_piano.fig
Libraries/Labels/: cassette_label.fig
Libraries/Networks/: NodeB.fig  cloud.fig  router.fig  wlan.fig
Libraries/Welding/: note.txt
app-defaults/: Fig  Fig.in
doc/: Makefile.am  Makefile.in  xfig.man.in  xfig_man.html.in
doc/html/: authors.html  bugs_fixed.html  contents.html  editing.html  fig-format.html  i18n.html  installation.html  new_features.html  options.html
doc/html/images/: xfig-title.fig
fig2dev/: CHANGES  configure.ac  version.m4
fig2dev/fig2dev/: Makefile.am  Nmakefile  bound.c  config.vc.in  drivers.h  fig2dev.c  object.h  read.c  read1_3.c  trans_spline.c
fig2dev/transfig/: transfig.c  transfig.h
lib/: isascii.c  malloc.c  realloc.c  strdup.c  strndup.c  strstr.c
m4/: tl_check_header_path.m4  tl_search_libs_path.m4
splash-image/: spl_bckgnd.fig
src/: .e_bringtofrontsendtoback.c.swp  Makefile.am  Makefile.in  SimpleMenu.c  SmeCascade.c  SmeCascade.h  SmeCascadeP.h  Xfuncs.h  Xosdefs.h  d_subspline.c  d_text.c  e_bringtofrontsendtoback.c  e_bringtofrontsendtoback.h  e_edit.c  e_scale.c  e_update.c  f_neuclrtab.c  f_picobj.c  f_picobj.h  f_read.c  f_read.h  f_readeps.c  f_readgif.c  f_readjpg.c  f_readold.c  f_readpcx.c  f_readpcx.h  f_readpng.c  f_readppm.c  f_readtif.c  f_readxbm.c  f_save.c  f_util.c  f_util.h  fig.h  main.c  mode.c  mode.h  object.h  pathmax.h  (+39 more)
tests/: Makefile.am  Makefile.in  interactive  package.m4  test3.c  testsuite  testsuite.at
xpm_splash_logo/: spl_bckgnd.fig
(+215 files in other folders)
